[package]
name = "relay_runner"
version = "0.1.0"
authors = ["Christopher Maujean <christopher@maujean.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
ctrlc = { version = "3.1.9", features = ["termination"] }
float_duration = "0.3.3"
